erDiagram
    %% ===== CORE RELATIONSHIPS =====
    users {
        bigint id PK
        varchar name
        varchar email UK
        varchar role
        boolean is_premium
        timestamp created_at
    }

    files {
        bigint id PK
        bigint user_id FK
        bigint parent_id FK
        varchar file_name
        varchar file_path
        boolean is_folder
        boolean is_blockchain_stored
        boolean is_vectorized
        timestamptz deleted_at
    }

    documents {
        bigint id PK
        bigint file_id FK
        text content
        vector embedding
        jsonb metadata
    }

    blockchain_uploads {
        bigint id PK
        bigint file_id FK
        varchar provider
        varchar upload_status
        varchar ipfs_hash
    }

    system_activities {
        bigint id PK
        bigint user_id FK
        bigint file_id FK
        varchar activity_type
        varchar action
        text description
        timestamp created_at
    }

    file_access_logs {
        bigint id PK
        bigint file_id FK
        bigint user_id FK
        varchar access_type
        inet ip_address
        timestamp started_at
    }

    user_sessions {
        bigint id PK
        bigint user_id FK
        varchar session_id UK
        inet ip_address
        boolean is_active
    }

    %% ===== RELATIONSHIPS =====
    users ||--o{ files : owns
    users ||--o{ system_activities : performs
    users ||--o{ file_access_logs : accesses
    users ||--o{ user_sessions : creates

    files ||--o{ files : contains
    files ||--o{ documents : vectorizes
    files ||--o{ blockchain_uploads : uploads
    files ||--o{ system_activities : affects
    files ||--o{ file_access_logs : accessed

    user_sessions ||--o{ file_access_logs : tracks
